--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "socket.io-client": "^4.8.1",
+    "http": "^0.0.1-security",
+    "next": "^15.5.3",
+    "socket.io": "^4.8.1",
+    "net": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
